# Visible

./: .gitattributes  .gitignore  .gitignore_global  .gitmodules  CMakeLists.txt  README.md  modules.org
Assets/test_data/: 01-EF3M0.tif  Bars.mov  onecolumn.txt  rev0.rfymov  rev1.rfymov  rev2.rfymov  ump4.mov  zser16.stk  zser24.stk
Resources/: imgui.ini
Visible/: imGui_utils.h  ut_gui_plot.cpp
Visible/assets/: data.txt  imgui.ini
Visible/docs/: Doxyfile  doxyfile.in
Visible/include/: AVReader.hpp  AccordionItem.h  Item.h  LifContext.h  MovContext.h  Object.h  ObjectContainer.h  OcvVideo.h  OnImagePlotUtils.h  Resources.h  TimeSeriesPlotUtils.h  TinyUi.h  VisibleApp.h  algoFunctions.hpp  algo_Lif.hpp  algo_Mov.hpp  algo_cardiac.hpp  algo_mov.hpp  algo_runners.hpp  app_core.h  app_logger.hpp  async_tracks.h  cache_grabber.h  cached_frame_buffer.h  cached_results.hpp  cinder_buffer.hpp  contraction.hpp  contraction_geometry.hpp  contraction_t.hpp  cpp-perf.hpp  cvCaptureProperties.hpp  cvVideoPlayer.h  cvmat_cereal_serialization.h  dbscan.h  eigen_utils.hpp  etw_utils.hpp  getLuminanceAlgo.hpp  graph1d.hpp  guiContext.h  gui_base.hpp  (+40 more)
Visible/local_cinder_imgui/: README.md
Visible/src/: #visible_lif_impl.cpp#  .#visible_lif_impl.cpp  AVReader.mm  AVReaderWrapper.mm  AccordionItem.cpp  InteractiveObject.cpp  Item.cpp  Plist.cpp  Swatch.cpp  TimeSeriesPlotUtils.cpp  VisibleApp.cpp  VisibleRunApp.cpp  __visible_mov_impl.cpp  algo_Lif.cpp  algo_Mov.cpp  algo_shortterm.cpp  algo_ssmt.cpp  configHandler.cpp  console.cpp  contraction.cpp  contraction_t.cpp  core_ssmt.cpp  cvVideoPlasyer.cpp  cvVideoPlayer.cpp  dbscan.cpp  eigen_utils.cpp  etw_utils.cpp  fyn_segmentation.cpp  gui_handler.cpp  imgui_experiment.cpp  imguivariouscontrols.cpp  lif_browser.cpp  lif_core.cpp  lif_serie.cpp  logger.cpp  median_levelset.cpp  median_levelset.hpp  moviong_region.cpp  nms.cpp  nr_support.cpp  (+13 more)
Visible/test/: ImCurveEdit.cpp  ImCurveEdit.h  ImSequencer.cpp  ImSequencer.h  Resources.h  kalman_test.cpp  main.cpp  particle_test_main.cpp  sequenceUtil.cpp  sequenceUtil.hpp  undoUtils.h  ut_cardio.hpp  ut_gui_main.cpp  ut_gui_plot.cpp  ut_lif.hpp  ut_qtime.cpp  ut_units.hpp
Visible/xcode/: Bina.plist  FieldController.h  Info.plist  ParticleSystem.h  Visible copy2-Info.plist  VisibleApp-Info.plist  VisibleGtest copy-Info.plist  VisibleRunRelease.entitlements  VisibleRunner-Info.plist  VisibleTestApp-Info.plist  Visible_GTest_Prefix.pch  Visible_Prefix.pch  Visible_Run_Prefix.pch  nms.cpp  sscli-Info.plist  sscli.cfg  temporal_medianOf3.hpp
cmake/: checked_find_package.cmake  externalpackages.cmake  macros.cmake
dependencies/: CMakeLists.txt
include/: AVReader.hpp  InteractiveObject.h  LifContext.h  Plist.hpp  VisibleApp.h  algoFunctions.hpp  algo_registry.hpp  clipManager.hpp  cluster_geometry.hpp  configHandler.hpp  console.h  contraction.hpp  directoryPlayer.h  etw_utils.hpp  grabber.h  graph1d.hpp  imgui_experiment.hpp  iowriter.hpp  median_levelset.hpp  oiio_utils.hpp  permutation_entropy.h  result_serialization.h  segmentation_parameters.hpp  sm_producer.h  sm_producer_impl.h  ssmt.hpp  thread.h  timed_types.h  tracker.h  visible_cli.hpp  visible_layout.hpp
include/cardio_model/: cerruti_rectangle_integral.hpp  metric.hpp
include/cinder_cv/: affine_rectangle.h  cinder_xchg.hpp
include/core/: GLMmath.h  angle_units.h  boost_units.hpp  boost_units_literals.h  cm_time.hpp  concurrent_containers.hpp  core.hpp  coreGLM.h  file_system.hpp  fit.hpp  glmutils.h  kmeans1d.hpp  mathBSpline.h  pf.h  rand_support.h  signaler.h  simple_timing.hpp  stl_utils.hpp  svl_exception.hpp  timed_callback.h  vImageRef.h
include/imGuiCustom/: CinderImGui.h  ImGuiExtensions.h  imGui_utils.h  imgui-floodfill.h  imgui_panel.hpp
include/logger/: logger.hpp
include/nr/: nr.h
include/otherIO/: lifFile.hpp
include/time_series/: basicTimeSeries.h
include/vision/: colorhistogram.hpp  correlation1d.hpp  disjoint-set.h  drawUtils.hpp  ellipse.hpp~  ellipse_fit.hpp  ipUtils.h  ip_functors.hpp  labelconnect.hpp  opencv_utils.hpp  pixel_traits.h  registration.h  roiVariant.hpp  rowfunc.h  self_similarity.h
patterns/: core.hpp  fit.hpp  gtest_image_utils.hpp  lineseg.cpp  lineseg.hpp  main.cpp  pair.hpp  pimpl.hpp  shared_queue.hpp  singleton.hpp  stats.hpp  stl_utils.hpp  vector2d.hpp
patterns.xcodeproj/: project.pbxproj
patterns.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
patterns/shmem_io/: PngIO.H  shmemIO.h
patterns/tinyGL/: tinyGL.cpp  tinyGL.h  tinyGLImage.cpp  tinyGLImage.h  tinyGLManager.cpp  tinyGLManager.h
patterns/vision/: angle_units.hpp  corners.hpp  drawUtils.hpp  edgel.cpp  edgel.h  fit.hpp  genHistogram.h  gradient.cpp  gradient.h  histo.cpp  histo.h  ipUtils.h  ip_utils.cpp  matpixel.cpp  pixel_traits.h  rectangle.h  registration.cpp  registration.h  roiRoot.h  roiWindow.h  rowfunc.cpp  rowfunc.h  rowfunc.hpp  sample.hpp  simple_ipl.hpp  sparsehist.h
proj/: Info.plist
proj/Resources/: Visible.icns  local_vars.xcconfig
proj/cmake/: CMakeLists.txt  Info.plist  spdlog.cmake
projects/UCamera/: CVSiteTemplate.mm  Camera-Bridging-Header.h  bitvector.cpp
projects/Visible/: AVReader.hpp  VisibleAppDelegateImpl.mm
projects/Visicli/: convertMatrix.cpp  main.cpp  peaker.h  peakspotter.cpp  peakspotter.h
projects/common/: InteractiveObject.h  MathUtils.h  app_utils.hpp  base_signaler.h  time_index.h  time_index_cache.h
projects/common_configs/: cli-debug.xcconfig  cli-release.xcconfig  cp-cv.xcconfig  imagine-ios-cv.xcconfig  ios-cv.xcconfig
projects/cpvision/: CONTRIBUTING.md  README.md
src/: SampleApp.cpp  VisibleApp.cpp  algo_ssmt.cpp  boost_literals.cpp  contraction_t.cpp  core_ssmt.cpp  core_support.cpp  etw_utils.cpp  labelBlob.cpp  logger.cpp  matpixel.cpp  onImagePlotUtils.cpp  pf.cpp  rand_support.cpp  registration.cpp  result_ssmt.cpp  rowfunc.cpp  self_similarity.cpp  sm_producer.cpp  time_spec.cpp  visible_impl.cpp  visible_lif_impl.cpp  voxel_processor.cpp  voxel_ssmt.cpp
src/imGuiCustom/: CinderImGui.cpp  imgui_panel.cpp  (+3 more)
svl/: vImageRef.h
(+1109 files in other folders)
